--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -36,7 +36,7 @@ html {
     color-scheme: dark;
 
     --app-primary: #3b82f6;
-    --app-on-primary: #0f172a;
+    --app-on-primary: #f8fafc;
     --app-secondary: #64748b;
     --app-tertiary: #d16900;
     --app-background: #0f172a;
